--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,7 @@
         }
     ],
     "minimum-stability": "stable",
-    "require": {}
+    "require": {
+        "phpunit/phpunit": "^9.5"
+    }
 }
