--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shukriyusof/malaysia",
+    "name": "shukriyusof/kolonialisme",
     "type": "library",
     "license": "GPL-2.0-or-later",
     "authors": [
@@ -12,5 +12,10 @@
     "require": {
         "php": "^7.3",
         "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "shukriyusof\\kolonialisme\\": ""
+        }
     }
 }
