--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "beta",
     "require": {
-        "php": "^7.3",
+        "php": ">=7.3 < 8.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
