--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "beta",
     "require": {
-        "php": ">=7.3 < 8.0",
+        "php": "^7.3 || ^8.0",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
