update to suite test in linux

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload": {
         "psr-4": {
-            "shukriyusof\\kolonialisme\\": "src/"
+            "Shukriyusof\\Kolonialisme\\": "src/"
         }
     }
 }
