--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -8,6 +8,7 @@
          convertWarningsToExceptions="true"
          processIsolation="false"
          stopOnFailure="false"
+         bootstrap="vendor/autoload.php"
 >
     <testsuites>
         <testsuite name="PHP ArrayList Test Suite">
