--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,18 @@
 language: php
 
 php:
-  - 7.3
-  - 7.4
-  - 8.0
+    - 7.3
+    - 7.4
+    - 8.0
 
 sudo: false
 
-before_script: composer install
-script: phpunit
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer install --no-interaction --prefer-source --dev
+
+script:
+    - vendor/bin/phpunit --coverage-clover coverage.xml
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
