chore: clean code

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,19 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="false" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
-  <coverage includeUncoveredFiles="true">
-    <include>
-      <directory suffix=".php">./src</directory>
-    </include>
-    <report>
-      <clover outputFile="clover.xml"/>
-    </report>
-  </coverage>
-  <testsuites>
-    <testsuite name="PHP ArrayList Test Suite">
-      <directory>./tests</directory>
-    </testsuite>
-  </testsuites>
-  <logging>
-    <!-- and this is where your report will be written -->
-  </logging>
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <ini name="xdebug.mode" value="coverage" />
+        <env name="XDEBUG_MODE" value="coverage" />
+    </php>
+    <coverage includeUncoveredFiles="true">
+        <include>
+        <directory suffix=".php">./src</directory>
+        </include>
+        <report>
+        <clover outputFile="clover.xml"/>
+        </report>
+    </coverage>
+    <testsuites>
+        <testsuite name="PHP ArrayList Test Suite">
+        <directory>./tests</directory>
+        </testsuite>
+    </testsuites>
+    <logging>
+        <!-- and this is where your report will be written -->
+    </logging>
 </phpunit>
