--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "shukriyusof/kolonialisme",
     "type": "library",
-    "license": "GPL-2.0-or-later",
+    "license": "GPL-3.0-ONLY",
     "description": "This package was build for anyone want to find schools in Malaysia",
     "authors": [
         {
