--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit backupGlobals="false"
-         backupStaticAttributes="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         processIsolation="false"
-         stopOnFailure="false"
-         bootstrap="vendor/autoload.php"
->
+<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" backupGlobals="false" backupStaticAttributes="false" colors="true" convertErrorsToExceptions="true" convertNoticesToExceptions="true" convertWarningsToExceptions="true" processIsolation="false" stopOnFailure="false" bootstrap="vendor/autoload.php" xsi:noNamespaceSchemaLocation="https://schema.phpunit.de/9.3/phpunit.xsd">
+    <php>
+        <ini name="error_reporting" value="-1" />
+        <ini name="xdebug.mode" value="coverage" />
+        <env name="XDEBUG_MODE" value="coverage" />
+    </php>
+    <coverage includeUncoveredFiles="true">
+        <include>
+        <directory suffix=".php">./src</directory>
+        </include>
+        <report>
+        <clover outputFile="clover.xml" />
+        </report>
+    </coverage>
     <testsuites>
         <testsuite name="PHP ArrayList Test Suite">
-            <directory>./tests</directory>
+        <directory>./tests</directory>
         </testsuite>
     </testsuites>
-    <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
-            <!-- this is the path of the files included in your clover report -->
-            <directory suffix=".php">./src</directory>
-        </whitelist>
-    </filter>
     <logging>
         <!-- and this is where your report will be written -->
-        <log type="coverage-clover" target="clover.xml"/>
     </logging>
 </phpunit>
