--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 language: php
 
+ "os": [
+    "linux"
+],
+"dist": "xenial",
+
 php:
     - 7.3
     - 7.4
     - 8.0
-
-sudo: false
 
 before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-    - vendor/bin/phpunit tests/
+    - vendor/bin/phpunit
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
